--- a/front-end/webapp/src/app/modules/internacion/dialogs/effective-time-dialog/effective-time-dialog.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/effective-time-dialog/effective-time-dialog.component.html
@@ -10,14 +10,18 @@
 			<mat-form-field appearance="outline">
 				<mat-label>Fecha</mat-label>
 				<input matInput id="date" [matDatepicker]="myDatepicker" formControlName="date"
-					[max]="today" required>
+					[max]="today">
 				<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
 				<mat-datepicker #myDatepicker>
 				</mat-datepicker>
+				<mat-error *ngIf="hasError(timeForm, 'required', 'date')" [translate]="'forms.REQUIRED'"></mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label>Hora</mat-label>
-				<input matInput id="time" type="text" formControlName="time" pattern="([0-1]{1}[0-9]{1}|20|21|22|23):[0-5]{1}[0-9]{1}" required>
+				<input matInput id="time" type="text" formControlName="time" pattern="([0-1]{1}[0-9]{1}|20|21|22|23):[0-5]{1}[0-9]{1}">
+				<mat-error *ngIf="hasError(timeForm, 'required', 'time')" [translate]="'forms.REQUIRED'"></mat-error>
+				<mat-error *ngIf="hasError(timeForm, 'pattern', 'time')">La hora debe cumplir con el formato de 24 hs y tener dos digitos para la hora y los minutos respectivamente</mat-error>
+				<mat-error *ngIf="hasError(timeForm, 'futureTime', 'time')">La hora debe ser anterior a la hora actual</mat-error>
 			</mat-form-field>
 		</section>
 	</div>
