--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -24,9 +24,12 @@
 			<ng-container *ngIf="!hideFilterPanel else editAppointment">
 				<div fxLayout="column" fxLayoutGap="5px">
 					<span class="mat-caption">{{'turnos.appointment.coverageData.COVERAGE_DATA' | translate}}</span>
-					<span class="mat-body patient-info coverage-text" *ngIf="coverageData"
-						matTooltip="{{coverageData.medicalCoverage.name}}">{{coverageText}} </span>
-					<span class="mat-body patient-info coverage-text" *ngIf="!coverageData">{{"Sin información"}} </span>
+					<div fxLayout= "row" fxLayoutGap="5px">
+						<span class="mat-body patient-info coverage-text" *ngIf="coverageData"
+							matTooltip="{{coverageData.medicalCoverage.name}}">{{coverageText}}</span>
+						<span class="mat-body patient-info coverage-text" *ngIf="!coverageData">{{"Sin información"}} </span>
+						<span class="mat-body patient-info coverage-text" *ngIf="coverageNumber">/ {{coverageNumber}}</span>
+					</div>
 				</div>
 				<div fxLayout="column" fxLayoutGap="5px">
 					<span class="mat-caption" [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'">:</span>
