--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -167,7 +167,7 @@
 				<app-summary-card *ngIf="internmentEpisodeSummary"
 								  id="internment_summary_card" [header]="internacionSummary">
 					<mat-card-content>
-						<app-internment-episode-summary [hasEpicrisis]="epicrisisDoc" [internmentEpisode]="internmentEpisodeSummary" [patientId]="patientId" [showDischarge]="showDischarge">
+						<app-internment-episode-summary [canLoadProbableDischargeDate]="canLoadProbableDischargeDate" [hasEpicrisis]="epicrisisDoc" [internmentEpisode]="internmentEpisodeSummary" [patientId]="patientId" [showDischarge]="showDischarge">
 						</app-internment-episode-summary>
 					</mat-card-content>
 				</app-summary-card>
